# kg-covid-19

./: .gitignore  .travis.yml  CONTRIBUTING.md  Jenkinsfile  LICENSE.txt  MANIFEST.in  README.md  README.rst  Run-KG-COVID-19-pipeline.ipynb  data-processing-workflow.md  download.yaml  example-KG-COVID-19-usage.ipynb  incoming.txt  incoming.yaml  kg-hub.md  merge.yaml  merge_jenkins.yaml  merge_kg.py  pyproject.toml  requirements.txt  run.py  sample-merge-config.yml  setup.py  sonar-project.properties  tox.ini  ttd_merge.yaml
.spp_cache/: badges.json
doc/: index.html  modules.html  search.html  searchindex.js
docs/: genindex.html  getting_started.html  index.html  kg_covid_19.html  kg_covid_19.transform_utils.chembl.html  kg_covid_19.transform_utils.drug_central.html  kg_covid_19.transform_utils.gocam_transform.html  kg_covid_19.transform_utils.html  kg_covid_19.transform_utils.intact.html  kg_covid_19.transform_utils.ontology.html  kg_covid_19.transform_utils.pharmgkb.html  kg_covid_19.transform_utils.sars_cov_2_gene_annot.html  kg_covid_19.transform_utils.scibite_cord.html  kg_covid_19.transform_utils.string_ppi.html  kg_covid_19.transform_utils.ttd.html  kg_covid_19.transform_utils.zhou_host_proteins.html  kg_covid_19.utils.html  modules.html  objects.inv  py-modindex.html  run.html  search.html  searchindex.js  setup.html  tests.html
documentation/: README.md
kg_covid_19/: __init__.py  __version__.py  download.py  edges.py  make_holdouts.py  query.py  transform.py
kg_emerging_viruses/: __init__.py  download.py  transform.py
notebooks/: embedding_umap.ipynb
(+199 files in other folders)
